--- a/src/style.css
+++ b/src/style.css
@@ -15,7 +15,7 @@ body {
   border-radius: 20px;
   height: 470px;
   padding: 20px 15px;
-  background-color: rgb(0, 255, 166);
+  background-color: #00ffa6;
 }
 
 .search-engine {
